--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "plainte-c5n",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Générateur de plainte du Collectif du 5 novembre",
+  "version": "1.0.0",
+  "author": "Lucas Leroux <lucas.leroux@protonmail.com>",
   "dependencies": {
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.4.0",
-    "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-postcss": "^2.3.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
