--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "version": "1.0.0",
   "author": "Lucas Leroux <lucas.leroux@protonmail.com>",
   "dependencies": {
-    "gatsby": "^2.21.0",
+    "gatsby": "^2.21.9",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-postcss": "^2.3.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-sharp": "^2.5.0",
+    "gsap": "^3.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -20,7 +22,7 @@
   },
   "devDependencies": {
     "prettier": "2.0.5",
-    "tailwindcss": "^1.4.1"
+    "tailwindcss": "^1.4.4"
   },
   "keywords": [
     "gatsby"
