--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "Lucas Leroux <lucas.leroux@protonmail.com>",
   "dependencies": {
+    "axios": "^0.19.2",
     "gatsby": "^2.21.9",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-postcss": "^2.3.0",
@@ -18,6 +19,7 @@
     "places.js": "^1.18.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0"
   },
